--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "PUBLIC_URL=\"/light-brush\" CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
